# clockify-x-youtrack

./: .dockerignore  .env.sample  .gitignore  Dockerfile  alembic.ini  cloyt-sample.toml  compose.yml  example.env  main.py  pyproject.toml  requirements.txt  sample.env
nginx/: Dockerfile  nginx.conf  ssl-params.conf
src/cloyt/: infrastructure.py  main.py
src/cloyt/alembic/: env.py
src/cloyt/alembic/versions/: 6dbc5c7cb1df_add_default_work_type_to_proj.py  db1e13ec28c0_initial.py  eec07be171f9_employees_soft_delete.py
src/cloyt/apps/admin/: auth_backend.py  views.py
src/cloyt/apps/daemon/: synchronizer.py
src/cloyt/domain/: models.py
src/cloyt/main/: admin.py  daemon.py
